--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="landingpage.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
-        <div class="logo"><a href="#"><img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="40%"></a>
+        <div class="logo"><a href="#"><img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="30%"></a>
             <ul class="pages">
                 <li><a href="Mentorprofile.html">Mentor profile</a></li>
                 <li><a a href="Achievement.html">Achievement</a></li>
