--- a/summary.html
+++ b/summary.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Born a Crime</h1>
+    <div class="born">
+    <img src="born a a crime.jpg" alt="born a crime" width="10%">
+</div>
     <p>Before apartheid segregated South Africa’s people by color, Black South Africans were divided into tribes. 
         These tribes had a long history of conflict, particularly between the two dominant groups, the Zulu and the Xhosa. 
         The Zulu, a warrior people, fought back against European invaders and were decimated. The Xhosa people, by contrast, 
