--- a/Goal.html
+++ b/Goal.html
@@ -12,7 +12,8 @@
         <div class="image">
             <img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="20%">
         </div>
-            <ul class="pages">
+            <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Mentorprofile.html">Mentor profile</a></li>
                 <li><a a href="Achievement.html">Achievement</a></li>
                 <li><a a href="Goal.html">Goal</a></li>
@@ -29,8 +30,38 @@
             <li>4</li>
             <li>5</li>
             <li>6</li>
-</div>
-
     </ol>
+
+    <div id="footer">
+    <div id="product">
+        <h2>PRODUCT</h2>
+        <P>Download</P>
+        <p>Location</p>
+        <p>services</p>
+        <p>Address</p>
+        <p>Map</p>
+    </div>
+    <div>
+        <h2>COMMUNITY</h2>
+        <P>Accessibilty</P>
+        <p>Frontine</p>
+        <p>Gift</p>
+        <p>Quest</p>
+        <p>Abort us</p>
+        <p>Contact us</p>
+        <p>Center</p>
+    </div>
+    <div>
+        <h2>ABOUT</h2>
+        <p>Founders</p>
+        <p>Work</p>
+        <p>Newsroom</p>
+    </div>
+</div>
+    
+   
+    
+
+         </div>
 </body>
 </html>
