--- a/summary.html
+++ b/summary.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="summary.css">
 </head>
 <body>
     <h1>Born a Crime</h1>
     <div class="born">
-    <img src="born a a crime.jpg" alt="born a crime" width="10%">
+    <img src="born a a crime.jpg" alt="born a crime" width="20%">
 </div>
     <p>Before apartheid segregated South Africa’s people by color, Black South Africans were divided into tribes. 
         These tribes had a long history of conflict, particularly between the two dominant groups, the Zulu and the Xhosa. 
