--- a/Mentorprofile.html
+++ b/Mentorprofile.html
@@ -12,7 +12,8 @@
         <div class="image">
             <img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="30%">
         </div>
-            <ul class="pages">
+            <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Mentorprofile.html">Mentor profile</a></li>
                 <li><a a href="Achievement.html">Achievement</a></li>
                 <li><a a href="Goal.html">Goal</a></li>
@@ -20,24 +21,50 @@
             </ul>
         </div>
         <div>
-            <h1 class="heading">Mentor profile</h1>
+            <h1 class="heading">Mentor profile </h1>
 <!-- <img src="mentor.jpeg" width="20%"> -->
 <div class="info">
-    <img src="mentor.jpeg" width="20%">
+    <img src="mentor.jpeg" width="20%" id="mymentor">
     <br>
     <b><a>Name: </a>Asha Abdulrasgid</b>
-    <br>
-    <b><a>Profession: </a>MS Dynamic Developer</b>
     <br>
     <b><a>Company: </a>Google WTM</b>
     <br>
     <b><a>Nationality: </a>Kenyan</b>
     <br>
     <b><a>Intrest:</a> computer pride</b>
+    <br>
+    <b><a>Profession: </a>MS Dynamic Developer</b>
 </div>
-
-
-        </div>
+ </div>
+ 
+ <div id="footer">
+    <div id="product">
+        <h2>PRODUCT</h2>
+        <P>Download</P>
+        <p>Location</p>
+        <p>services</p>
+        <p>Address</p>
+        <p>Map</p>
+    </div>
+    <div>
+        <h2>COMMUNITY</h2>
+        <P>Accessibilty</P>
+        <p>Frontine</p>
+        <p>Gift</p>
+        <p>Quest</p>
+        <p>Abort us</p>
+        <p>Contact us</p>
+        <p>Center</p>
+    </div>
+    <div>
+        <h2>ABOUT</h2>
+        <p>Founders</p>
+        <p>Work</p>
+        <p>Newsroom</p>
+    </div>
+</div>
+ 
     </div>
 </body>
 </html>
