--- a/Todo.html
+++ b/Todo.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div class="to-do">
-        <img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="5%">
+        <img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="5%" id="image">
 
-    <ul class="pages">
+    <ul >
+        <li><a href="index.html">Home</a></li>
         <li><a href="Mentorprofile.html">Mentor profile</a></li>
         <li><a a href="Achievement.html">Achievement</a></li>
         <li><a a href="Goal.html">Goal</a></li>
@@ -18,15 +19,17 @@
     </ul>
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do list<img src="take-note_5395519.png"></h2>
+            <h2 style="color: orangered;">To-Do list<img src="take-note_5395519.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
                 <button onclick=""AddTask>Add</button>
                 
             </div>
+           
            <ul id="list-container">
            <input type="checkbox">
-           <a href="summary.html">Born a Crime</a>
+           <span>Born A Crime</span>
+           <button><a href="summary.html">View</a></button>
            <br>
            <input type="checkbox">
            <a>Sisters</a>
@@ -38,6 +41,33 @@
 
     </div>
     <script src="script.js"></script>
+
+    <div id="footer">
+        <div id="product">
+            <h2>PRODUCT</h2>
+            <P>Download</P>
+            <p>Location</p>
+            <p>services</p>
+            <p>Address</p>
+            <p>Map</p>
+        </div>
+        <div>
+            <h2>COMMUNITY</h2>
+            <P>Accessibilty</P>
+            <p>Frontine</p>
+            <p>Gift</p>
+            <p>Quest</p>
+            <p>Abort us</p>
+            <p>Contact us</p>
+            <p>Center</p>
+        </div>
+        <div>
+            <h2>ABOUT</h2>
+            <p>Founders</p>
+            <p>Work</p>
+            <p>Newsroom</p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
