--- a/index.html
+++ b/index.html
@@ -1,26 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="navbar">
-        <div class="logo"><a href="#"><img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="30%"></a>
-            <ul class="pages">
-                <li><a href="Mentorprofile.html">Mentor profile</a></li>
-                <li><a a href="Achievement.html">Achievement</a></li>
-                <li><a a href="Goal.html">Goal</a></li>
-                <li><a a href="Todo.html">To do list</a></li>
-            </ul>
-        </div>
-    <div>
-<img src="Screenshot from 2024-04-25 17-26-05.png"alt="">
-<h1>WELCOME TO YOUR MENTORSHIP PROGRAM
-</h1>
-    </div>
-</div>
-</body>
+      <div class="logos">
+        <img src="Screenshot from 2024-04-25 14-41-38.png" id="logo">
+      </div>
+        <ul>
+          <li><a href="home">Home</a></li>
+          <li><a href="Mentorprofile.html">Mentor profile</a></li>
+          <li><a a href="Achievement.html">Achievement</a></li>
+          <li><a a href="Goal.html">Goal</a></li>
+          <li><a a href="Todo.html">To do list</a></li>
+        </ul>
+      </div>
+      <div id="image">
+        <img src="https://thumbs.dreamstime.com/b/mature-african-american-business-woman-offering-hand-to-young-protegee-going-upstairs-as-metaphor-mentorship-hiring-eps-104131796.jpg?w=992" alt="" id="landphoto">
+        <h1>WELCOME TO YOUR MENTORSHIP PROGRAM</h1>
+      </div>
+  
+
+    <div id="footer">
+      <div id="product">
+          <h2>PRODUCT</h2>
+          <P>Download</P>
+          <p>Location</p>
+          <p>services</p>
+          <p>Address</p>
+          <p>Map</p>
+      </div>
+      <div>
+          <h2>COMMUNITY</h2>
+          <P>Accessibilty</P>
+          <p>Frontine</p>
+          <p>Gift</p>
+          <p>Quest</p>
+          <p>Abort us</p>
+          <p>Contact us</p>
+          <p>Center</p>
+      </div>
+      <div>
+          <h2>ABOUT</h2>
+          <p>Founders</p>
+          <p>Work</p>
+          <p>Newsroom</p>
+      </div>
+  </div>
+    
+  </body>
 </html>
+
