--- a/Achievement.html
+++ b/Achievement.html
@@ -7,17 +7,16 @@
     <link rel="stylesheet" href="Achievement.css">
 </head>
 <body>
-    <div class="Logo">
-    <div class="image">
-        <img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="20%">
+    <div class="navbar">
+        <div>
+          <img src="Screenshot from 2024-04-25 14-41-38.png" id="logo">
+        </div>
+      <a href="index.html">Home</a>
+      <a href="Mentorprofile.html">Mentor's profile</a>
+      <a href="Achievement.html">Achievement</a>
+      <a href="Goal.html">Goal</a>
+      <a href="Todo.html">To Do</a>
     </div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Mentorprofile.html">Mentor profile</a></li>
-            <li><a a href="Achievement.html">Achievement</a></li>
-            <li><a a href="Goal.html">Goal</a></li>
-            <li><a a href="Todo.html">To do list</a></li>
-        </ul>
     <div>
     <h1 class="heading">Achievement</h1>
     <ol>
@@ -32,7 +31,8 @@
     </ol>
 </div>
 
-<div id="footer">
+<footer>
+    <div class="thefooter">
     <div id="product">
         <h2>PRODUCT</h2>
         <P>Download</P>
@@ -58,6 +58,6 @@
         <p>Newsroom</p>
     </div>
 </div>
-    </div>
+</footer>
 </body>
 </html>
