--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
   </head>
   <body>
     <div class="navbar">
-      <div class="logos">
+      <div>
         <img src="Screenshot from 2024-04-25 14-41-38.png" id="logo">
       </div>
-        <ul>
-          <li><a href="home">Home</a></li>
-          <li><a href="Mentorprofile.html">Mentor profile</a></li>
-          <li><a a href="Achievement.html">Achievement</a></li>
-          <li><a a href="Goal.html">Goal</a></li>
-          <li><a a href="Todo.html">To do list</a></li>
-        </ul>
+    <a href="index.html">Home</a>
+    <a href="Mentorprofile.html">Mentor's profile</a>
+    <a href="Achievements.html">Achievements</a>
+    <a href="Goal.html">Goal</a>
+    <a href="Todo.html">To Do</a>
+  </div>
       </div>
       <div id="image">
         <img src="https://thumbs.dreamstime.com/b/mature-african-american-business-woman-offering-hand-to-young-protegee-going-upstairs-as-metaphor-mentorship-hiring-eps-104131796.jpg?w=992" alt="" id="landphoto">
@@ -26,6 +25,7 @@
   
 
     <div id="footer">
+      <div class="thefooter">
       <div id="product">
           <h2>PRODUCT</h2>
           <P>Download</P>
@@ -49,6 +49,7 @@
           <p>Founders</p>
           <p>Work</p>
           <p>Newsroom</p>
+      </div>
       </div>
   </div>
     
