--- a/Mentorprofile.html
+++ b/Mentorprofile.html
@@ -8,17 +8,16 @@
 </head>
 <body>
     <div class="mentor">
-    <div class="Logo">
-        <div class="image">
-            <img src="Screenshot from 2024-04-25 14-41-38.png" alt="Logo" width="30%">
+        <div class="navbar">
+            <div>
+              <img src="Screenshot from 2024-04-25 14-41-38.png" id="logo">
+            </div>
+          <a href="index.html">Home</a>
+          <a href="Mentorprofile.html">Mentor's profile</a>
+          <a href="Achievement.html">Achievements</a>
+          <a href="Goal.html">Goal</a>
+          <a href="Todo.html">To Do</a>
         </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Mentorprofile.html">Mentor profile</a></li>
-                <li><a a href="Achievement.html">Achievement</a></li>
-                <li><a a href="Goal.html">Goal</a></li>
-                <li><a a href="Todo.html">To do list</a></li>
-            </ul>
         </div>
         <div>
             <h1 class="heading">Mentor profile </h1>
@@ -38,7 +37,8 @@
 </div>
  </div>
  
- <div id="footer">
+<footer>
+    <div class="thefooter">
     <div id="product">
         <h2>PRODUCT</h2>
         <P>Download</P>
@@ -64,7 +64,7 @@
         <p>Newsroom</p>
     </div>
 </div>
+</footer>
  
-    </div>
 </body>
 </html>
