--- a/summary.html
+++ b/summary.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="summary.css">
 </head>
 <body>
+    <div class="chapter">
     <h1>Born a Crime</h1>
     <div class="born">
-    <img src="born a a crime.jpg" alt="born a crime" width="20%">
+    <img src="born a a crime.jpg" alt="born a crime" width="30%">
 </div>
+
     <p>Before apartheid segregated South Africa’s people by color, Black South Africans were divided into tribes. 
         These tribes had a long history of conflict, particularly between the two dominant groups, the Zulu and the Xhosa. 
         The Zulu, a warrior people, fought back against European invaders and were decimated. The Xhosa people, by contrast, 
@@ -33,5 +35,6 @@
          had likely just saved his life because bus drivers typically had ties to race gangs. His mother thanked God for saving them both, but Trevor asked if the next 
          time their car broke down, God could meet them at home instead
         </p>
+    </div>
 </body>
 </html>
